Ajustando mais um bug da visibilidade dos menus

--- a/css/flexbox.css
+++ b/css/flexbox.css
@@ -134,10 +134,10 @@
     overflow: scroll;
   }
 
-  .menu__lista:nth-child(2),
-  .menu__lista:nth-child(3),
-  .menu__lista:nth-child(4) {
-    display: flex;
+  .menu__secao:nth-child(2),
+  .menu__secao:nth-child(3),
+  .menu__secao:nth-child(4) {
+    display: block;
   }
 
   .menu__lista {
